--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:icon="@mipmap/ic_launcher_ws01_step01"
             android:roundIcon="@mipmap/ic_launcher_ws01_step01_round"
             android:taskAffinity="com.android.fundamentals.workshop01.WS01Step01.ScreenRotationActivity"
-            >
+            android:exported="true">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -41,7 +41,7 @@
             android:icon="@mipmap/ic_launcher_ws01_step02"
             android:roundIcon="@mipmap/ic_launcher_ws01_step02_round"
             android:launchMode="standard"
-            >
+            android:exported="true">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -74,7 +74,8 @@
             android:name=".workshop02.task.WS02AssignmentActivity"
             android:icon="@mipmap/ic_launcher_ws02_step01"
             android:label="@string/ws02_activity_title"
-            android:roundIcon="@mipmap/ic_launcher_ws02_step01_round">
+            android:roundIcon="@mipmap/ic_launcher_ws02_step01_round"
+            android:exported="true">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -86,7 +87,8 @@
             android:name=".workshop03.task.WS03AssignmentActivity"
             android:icon="@mipmap/ic_launcher_ws03_step01"
             android:label="@string/ws03_activity_title"
-            android:roundIcon="@mipmap/ic_launcher_ws03_step01_round">
+            android:roundIcon="@mipmap/ic_launcher_ws03_step01_round"
+            android:exported="true">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -98,7 +100,8 @@
             android:name=".workshop04.task.WS04AssignmentActivity"
             android:icon="@mipmap/ic_launcher_ws04_step01"
             android:label="@string/ws04_activity_title"
-            android:roundIcon="@mipmap/ic_launcher_ws04_step01_round">
+            android:roundIcon="@mipmap/ic_launcher_ws04_step01_round"
+            android:exported="true">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
