--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,7 @@
         <activity
             android:name=".workshop01.step02.WS01Step02ActivityB"
             android:label="@string/ws01_step02_activity_b_title"
-            android:launchMode="standard"
+            android:launchMode="singleInstance"
             />
 
         <!-- TODO(WS01:ST02) -->
@@ -67,7 +67,7 @@
         <activity
             android:name=".workshop01.step02.WS01Step02ActivityD"
             android:label="@string/ws01_step02_activity_d_title"
-            android:launchMode="standard"
+            android:launchMode="singleInstance"
             />
 
         <activity
